syntax = "proto3";

option csharp_namespace = "GrpcTutorial";

package tutorial;

service Signer {
	//Every RPC has exactly 1 request and 1 response object 
	rpc SignPerson (PersonRequest) returns (PersonReply);
}

message PersonRequest {
	//Numbers in message definitions are mandatory
	string firstName = 1;
	string lastName = 2;
	string address = 3;
	string email = 4;
}

message PersonReply {
	string name = 1;
	string contact = 2;
}